<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main"
    tools:context="com.example.serg.testapp.MainActivity">

    <TextView
        android:text="@string/enter_url_offer_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/requestLbl"
        android:textSize="@dimen/text_margin"
        android:textColor="@android:color/black"
        android:gravity="top|center_horizontal"
        android:layout_above="@+id/txtURL"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="60dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/request_btn_lbl"
        android:id="@+id/requestBtn"
        android:textSize="@dimen/abc_alert_dialog_button_bar_height"
        android:layout_marginBottom="56dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:enabled="false"
        android:gravity="center_horizontal" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtURL"
        android:inputType="textUri"
        android:layout_centerVertical="true"
        android:cursorVisible="true"
        android:text=""
        android:hint="@string/enter_url_txt"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
